# GMD-Engine

./: CMakeLists.txt  GMD-Engine.sln  README.md
3D-Renderer/: CMakeLists.txt
3D-Renderer/Source/: Core.cpp  Core.h
GMD/: CMakeLists.txt
GMD-Engine/: GMD-Engine.rc  GMD-Engine.vcxproj  GMD-Engine.vcxproj.filters  MenuWindow.cpp  MenuWindow.h  ModelingWindow.cpp  ModelingWindow.h  Resource.h  StartWindow.cpp
GMD/3D-Renderer/: CMakeLists.txt
GMD/3D-Renderer/Source/Camera/: Camera.h
GMD/3D-Renderer/Source/Core/: IApplication.h  Log.cpp  Log.h  ShaderClass.cpp  ShaderClass.h  Window.cpp  Window.h
GMD/3D-Renderer/Source/Headers/: GDM.h
GMD/3D-Renderer/Source/Libs/glad/: glad.h
GMD/3D-Renderer/Source/Utility/: Macros.h  Utility.cpp  Utility.h
GMD/Editor/Source/: Main.cpp
GMD/Editor/Source/Editor/: Editor.cpp  Editor.h
GMD/UI/: CMakeLists.txt
GMD/UI/Source/: Main.cpp
GMD/UI/Source/Editor/: Editor.cpp
UI/: CMakeLists.txt
UI/Source/: Main.cpp
UI/Source/Editor/: Editor.h
